resources/client.yaml
######################################################
# The client is a simple pod from which I can run curl
######################################################
apiVersion: v1
kind: Pod
metadata:
  name: curl
spec:
  containers:
  - name: curl
    image: curlimages/curl:latest
    command: ["sleep"]
    args: ["infinity"]
    volumeMounts:
    - name: rootca
      mountPath: /etc/internal-ca.crt
      subPath: internal-ca.crt
      readOnly: true
  volumes:
  - name: rootca
    configMap:
      name: rootca-configmap
