resources/dashboard-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard-route
spec:
  parentRefs:
  - name: nginx-gateway
    namespace: nginx
  hostnames:
  - dashboard.test.example
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: kubernetes-dashboard-kong-proxy
      kind: Service
      port: 80
